--- a/templates/index.html
+++ b/templates/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Wei's WIKI</title>  <!-- EDIT ME!! -->
+    <title>TITLE</title>  <!-- EDIT ME!! -->
 
     <!-- JQUERY -->
     <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
     <script src="//code.jquery.com/ui/1.10.4/jquery-ui.min.js"></script>
 
     <!-- MARKED -->
-    <script src="//chutsu.github.io/ditto/ver/latest/marked.js"></script>
+    <script src="//chutsu.github.io/ditto/ver/VER/marked.js"></script>
 
     <!-- HIGHLIGHT.JS -->
-    <link rel="stylesheet" href="//chutsu.github.io/ditto/ver/latest/github.css">
-    <script src="//chutsu.github.io/ditto/ver/latest/highlight.js"></script>
+    <link rel="stylesheet" href="//chutsu.github.io/ditto/ver/VER/github.css">
+    <script src="//chutsu.github.io/ditto/ver/VER/highlight.js"></script>
 
     <!-- MATHJAX -->
     <script type="text/x-mathjax-config">
@@ -35,9 +35,9 @@
       src="//cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_HTML">
     </script>
 
-    <!-- DITTO -->
-    <link rel="stylesheet" href="//chutsu.github.io/ditto/ver/latest/ditto.css">
-    <script src="js/ditto.js"></script>
+    <!-- DITTO CSS -->
+    <link rel="stylesheet" href="//chutsu.github.io/ditto/ver/VER/ditto.css">
+    <script src="//chutsu.github.io/ditto/ver/VER/ditto.js"></script>
 </head>
 <body>
     <!-- ESSENTIAL -->
@@ -54,17 +54,18 @@
     <!-- DITTO -->
     <script>
         $(function($) {
-          // essential settingsW
+          // essential settings
           ditto.index = "README.md",
           ditto.sidebar_file = "sidebar.md",
 
           // optional settings if you want github search
-          ditto.github_username = "icwx";   // <------- EDIT ME!!
-          ditto.github_repo = "wiki";        // <------- EDIT ME!!
-          ditto.highlight_code = true;       // <------- EDIT ME!!
+          ditto.github_username = null;   // <------- EDIT ME!!
+          ditto.github_repo = null;       // <------- EDIT ME!!
+          ditto.highlight_code = false;    // <------- EDIT ME!!
 
           // where the docs are actually stored on github - so you can edit
-          ditto.base_url = "https://github.com/chutsu/ditto/edit/gh-pages";
+          // e.g. https://github.com/chutsu/ditto/edit/gh-pages
+          ditto.base_url = "";            // <------- EDIT ME!!
 
           // run
           ditto.run();
