--- a/css/ditto.css
+++ b/css/ditto.css
@@ -74,10 +74,11 @@ body {
 }
 
 #content {
-    width: 580px;
+    
 
     margin-left: 300px;
     padding-top: 10px;
+    padding-right: 100px;
     padding-bottom: 150px;
 
     text-align: justify;
